<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/etAddWaterVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <RadioGroup
        android:id="@+id/rgAddWater"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_cup_radio_button_text"/>
        <RadioButton
            android:id="@+id/rbGlass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glass_radio_button_text"/>
        <RadioButton
            android:id="@+id/rbHalfLiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/half_liter_radio_button_text"/>
    </RadioGroup>
</LinearLayout>