<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ditsystems.com.zinger.MainActivity">

  <LinearLayout
      android:id="@+id/llMain"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0.5"
      android:orientation="vertical"
      android:gravity="bottom">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="10"
          android:orientation="vertical"
          android:gravity="center"
          >
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@mipmap/ic_launcher"/>
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_weight="1"
          >
          <TextView
              android:id="@+id/tvGenderMain"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Gender \n M"
              android:layout_weight="1"
              android:gravity="center"/>
          <TextView
              android:id="@+id/tvAgeMain"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Age"
              android:layout_weight="1"
              android:gravity="center"/>
          <TextView
              android:id="@+id/tvWeightMain"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Weight"
              android:layout_weight="1"
              android:gravity="center"/>
          <TextView
              android:id="@+id/tvHeightMain"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Height"
              android:layout_weight="1"
              android:gravity="center"/>
      </LinearLayout>
  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"

            >
            <Button
                android:id="@+id/btnWeightControl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_weight_control_title"/>
            <Button
                android:id="@+id/btnSleepingMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_sleeping_mode_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
            android:id="@+id/btnWaterControl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_water_balance_title"/>

            <Button
                android:id="@+id/btnPedometr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_pedometr_title"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
